feat: Implement initial CEO dashboard frontend, including HTML structure, JavaScript logic, and updated dependencies.

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -31,6 +31,7 @@
                     <label>Time Period:</label>
                     <div class="time-filter">
                         <button class="filter-btn" data-period="month">Current Month</button>
+                        <button class="filter-btn" data-period="last-month">Last Month</button>
                         <button class="filter-btn" data-period="quarter">This Quarter</button>
                         <button class="filter-btn active" data-period="ytd">YTD</button>
                     </div>
