feat: Implement comprehensive inventory management with QuickBooks Web Connector (QBWC) synchronization, Convex backend, and a new dashboard UI.

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -61,6 +61,7 @@
 
             <div class="header-right">
                 <div class="context-chip" id="lastUpdated">Data last refreshed: --</div>
+                <a class="icon-btn" href="/inventory">Inventory Ops</a>
                 <button class="icon-btn" id="notesBtn">Notes</button>
                 <button class="alert-btn" id="alertsBtn">
                     Alerts
